# numpy-benchmarks

./: .travis.yml  MANIFEST.in  Makefile  README.rst  allpairs_distances.py  allpairs_distances_loops.py  arc_distance.py  benchit.py  clean.sh  conv.py  cronbach.py  diffusion.py  fdtd.py  fft.py  fmt-bench  grouping.py  growcut.py  harris.py  hyantes.py  julia.py  np-bench  periodic_dist.py  requirements.txt  rosen.py  run.py  setup.py  smoothing.py  vibr_energy.py  wave.py  wdist.py
benchmarks/: allpairs_distances.py  allpairs_distances_loops.hpp  allpairs_distances_loops.py  arc_distance.hpp  arc_distance.py  check_mask.py  conv.py  cumsum.hpp  diffusion.hpp  euclidean_distance_square.py  fdtd.py  fft.py  grayscott.py  growcut.py  hyantes.py  l1norm.py  laplacien.hpp  laplacien.py  local_maxima.py  log_likelihood.hpp  make_decision.py  mandel.py  pairwise.py  reverse_cumsum.hpp  smoothing.py  wave.py  wdist.py
numpy_benchmarks/: __init__.py  np-bench
numpy_benchmarks/benchmarks/: arc_distance.cpp  check_mask.cpp  check_mask.py  cma_pt.cpp  cma_pt.py  create_grid.cpp  cronbach.cpp  cronbach.py  diffusion.cpp  euclidean_distance_square.cpp  evolve.cpp  grayscott.cpp  grayscott.py  grouping.cpp  grouping.py  harris.cpp  harris.py  hasting.cpp  hasting.py  l1norm.cpp  l1norm.py  l2norm.cpp  l2norm.py  laplacien.cpp  laplacien.py  local_maxima.py  log_likelihood.cpp  log_likelihood.py  lstsqr.cpp  lstsqr.py  make_decision.cpp  make_decision.py  mandelbrot.cpp  mandelbrot.py  multiple_sum.cpp  multiple_sum.py  pairwise.cpp  (+17 more)
xbench/: CMakeLists.txt  xtensor_bench.cpp
